--- a/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/ProdajaGreyMatter.csproj
+++ b/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/ProdajaGreyMatter.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -136,6 +137,18 @@
     <Compile Include="Forme\frmUnosStavke.Designer.cs">
       <DependentUpon>frmUnosStavke.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forme\frmNajboljiKupci.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forme\frmNajboljiKupci.Designer.cs">
+      <DependentUpon>frmNajboljiKupci.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forme\frmNajprodavanijiLijekovi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forme\frmNajprodavanijiLijekovi.Designer.cs">
+      <DependentUpon>frmNajprodavanijiLijekovi.cs</DependentUpon>
+    </Compile>
     <Compile Include="jedinicnamjera.cs">
       <DependentUpon>bazaPodatakaGreyMatter.tt</DependentUpon>
     </Compile>
@@ -170,6 +183,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forme\frmLijekovi.resx">
       <DependentUpon>frmLijekovi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forme\frmNajboljiKupci.resx">
+      <DependentUpon>frmNajboljiKupci.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forme\frmNajprodavanijiLijekovi.resx">
+      <DependentUpon>frmNajprodavanijiLijekovi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forme\frmNarudzbenica.resx">
       <DependentUpon>frmNarudzbenica.cs</DependentUpon>
