--- a/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/ProdajaGreyMatter.csproj
+++ b/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/ProdajaGreyMatter.csproj
@@ -174,6 +174,7 @@
     </Compile>
     <EmbeddedResource Include="Forme\frmDodajLijek.resx">
       <DependentUpon>frmDodajLijek.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Forme\frmIzbornik.resx">
       <DependentUpon>frmIzbornik.cs</DependentUpon>
