--- a/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/ProdajaGreyMatter.csproj
+++ b/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/ProdajaGreyMatter.csproj
@@ -77,6 +77,12 @@
     <Compile Include="Forme\frmDodajLijek.Designer.cs">
       <DependentUpon>frmDodajLijek.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forme\frmHelp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forme\frmHelp.Designer.cs">
+      <DependentUpon>frmHelp.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forme\frmIzbornik.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -176,6 +182,9 @@
       <DependentUpon>frmDodajLijek.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forme\frmHelp.resx">
+      <DependentUpon>frmHelp.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forme\frmIzbornik.resx">
       <DependentUpon>frmIzbornik.cs</DependentUpon>
     </EmbeddedResource>
@@ -220,6 +229,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EntityDeploy Include="bazaPodatakaGreyMatter.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
@@ -261,6 +271,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\slika_upitnik.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
