--- a/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/ProdajaGreyMatter.csproj
+++ b/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/ProdajaGreyMatter.csproj
@@ -275,6 +275,15 @@
   <ItemGroup>
     <None Include="Resources\slika_upitnik.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\lgog_fin.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\samo_logo_fin.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
