--- a/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/ProdajaGreyMatter.csproj
+++ b/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/ProdajaGreyMatter.csproj
@@ -39,12 +39,20 @@
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+    <Reference Include="Microsoft.ReportViewer.WinForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+    <Reference Include="MySql.Data, Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Transactions" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -155,6 +163,11 @@
     <Compile Include="Forme\frmNajprodavanijiLijekovi.Designer.cs">
       <DependentUpon>frmNajprodavanijiLijekovi.cs</DependentUpon>
     </Compile>
+    <Compile Include="greymatterpiDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>greymatterpiDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="jedinicnamjera.cs">
       <DependentUpon>bazaPodatakaGreyMatter.tt</DependentUpon>
     </Compile>
@@ -221,6 +234,7 @@
     <EmbeddedResource Include="Forme\frmUnosStavke.resx">
       <DependentUpon>frmUnosStavke.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="izvjestaj.rdlc" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -247,6 +261,17 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>bazaPodatakaGreyMatter.edmx</DependentUpon>
       <LastGenOutput>bazaPodatakaGreyMatter.cs</LastGenOutput>
+    </None>
+    <None Include="greymatterpiDataSet.xsc">
+      <DependentUpon>greymatterpiDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="greymatterpiDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>greymatterpiDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="greymatterpiDataSet.xss">
+      <DependentUpon>greymatterpiDataSet.xsd</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\jedinicnamjera.datasource" />
