--- a/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/ProdajaGreyMatter.csproj
+++ b/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/ProdajaGreyMatter.csproj
@@ -35,6 +35,9 @@
     <StartupObject>
     </StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>ikona.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
@@ -308,6 +311,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\samo_logo_fin.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ikona.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
